--- a/app/views/user/progresses/index.html.erb
+++ b/app/views/user/progresses/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Miejsce</th>
-      <th>Nazwa</th>
+      <th>Osoba</th>
       <th>Przygotowanie</th>
       <th>Zrobione zadania</th>
     </tr>
