--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,11 @@
  *= require_self
  *= require_tree .
  */
+
+.button-yellow  {
+    background-color: #ead206 !important;
+}
+
+.button-yellow:hover  {
+    box-shadow: inset 0 0 5em rgba(0,0,0,0.15),inset 0 -.15em 0 rgba(0,0,0,0.2),0 .15em 0 rgba(0,0,0,0.075);
+}
