--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,9 +41,12 @@
             <% if user_signed_in? %>
                     <strong><%= current_user.email.split("@").first.upcase %></strong> 
                     jesteś <%= current_user.ready_form %>  w <strong><%= current_user.task_counter(@subject) %> % </strong>&nbsp;&nbsp;&nbsp;
-                    <a href=<%= user_subject_progresses_path(@subject) %> class="button tiny secondary"> <span class="icon trophy"></span>Statystyki</a>
+                    <a href="<%= all_cards_subject_card_categories_path(@subject) %>" class="button tiny button-yellow"><span class='icon star'></span>Fiszki</a>
+                    <a href=<%= user_subject_progresses_path(@subject) %> class="button tiny secondary"> <span class="icon trophy" style="margin-right: 0px;"></span></a>
                     <%= link_to "Panel Admina", user_subject_categories_path(@subject), :class => 'button tiny' %>
-                    <%= link_to 'Edytuj konto', edit_user_registration_path, :class => 'button tiny' %> 
+                    <%= link_to edit_user_registration_path, :class => 'button tiny' do %>
+                      <span class='icon user' style="margin-right: 0px;"></span>
+                    <% end %>
                     <a href="<%= destroy_user_session_path %>" data-method="delete" rel="nofollow" class="button tiny secondary alert" class = 'button small alert' > <span class="icon off"></span>Wyloguj</a>
                 <% else %>
                     <a href="<%= new_user_session_path() %>" class="button secondary"  ><span class='icon user'></span>Zaloguj</a>
@@ -56,7 +59,10 @@
   </div>
   </div>
   <div class="container" style="margin-top: 70px">
-      <% if (@current_controller == 'tasks' and @current_action =='show') or (@current_controller == 'solutions' and @current_action =='index') %>
+      <% if (@current_controller == 'tasks' and @current_action =='show') or
+           (@current_controller == 'solutions' and @current_action =='index') or
+           (@current_controller == 'card_categories' and @current_action =='all_cards') or
+           (@current_controller == 'cards' and @current_action =='show') %>
         <div class="row" style="margin-left: -30px">
           <div class="span2">
             <%= yield(:sidebar) %>
